--- a/src/app/delete-acc/delete-acc.component.css
+++ b/src/app/delete-acc/delete-acc.component.css
@@ -81,6 +81,7 @@ td {
     padding: 8px;
     text-align: left;
     border: 1px solid #010101;
+    margin:0px;
 }
 
 th {
@@ -101,8 +102,8 @@ tr:hover {
 .deleteButton {
     color: white;
     background-color: red;
-    display: flex;
     justify-content: center;
+    text-decoration: none;
 }
 
 .Popup-container {
@@ -112,7 +113,25 @@ tr:hover {
     width: 300px;
     text-align: center;
     margin: 0 auto;
+    font-family: Arial, Helvetica, sans-serif;
 }
+
+.logOut img {
+    width: 35px;
+    height: auto;
+    margin-right: 0%;
+
+}
+
+.logOut button{
+    text-decoration: none;
+    color: black;
+    transition: 0.2s;
+    font-size:medium;
+    font-family: Arial, Helvetica, sans-serif;
+    
+}
+
 
 p {
     color: #ffffff;
@@ -123,7 +142,7 @@ p {
     margin-top: 20px;
 }
 
-button {
+.button-container button {
     padding: 10px 20px;
     margin: 0 10px;
     border: none;
