--- a/src/app/edit-acc/edit-acc.component.css
+++ b/src/app/edit-acc/edit-acc.component.css
@@ -69,6 +69,46 @@ section nav ul li a:hover{
 }
 
 
+.logOut img {
+    width: 35px;
+    height: auto;
+    margin-right: 0%;
+
+}
+
+.logOut button{
+    text-decoration: none;
+    color: black;
+    transition: 0.2s;
+    font-size:medium;
+    font-family: Arial, Helvetica, sans-serif;
+    
+}
+
+.Popup-container {
+    background-color: #ff0000;
+    border: 1px solid #ffffff;
+    padding: 20px;
+    width: 300px;
+    color: #fff;
+    text-align: center;
+    margin: 0 auto;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.button-container {
+    margin-top: 20px;
+}
+
+.button-container button {
+    padding: 10px 20px;
+    margin: 0 10px;
+    border: none;
+    background-color: #333;
+    color: #fff;
+    cursor: pointer;
+}
+
 table {
     width: 70%;
     font-family: Arial, Helvetica, sans-serif;
